--- a/Lifter/app/src/main/res/layout/fragment_chats.xml
+++ b/Lifter/app/src/main/res/layout/fragment_chats.xml
@@ -12,4 +12,15 @@
         android:layout_centerInParent="true"
         android:text="@string/chat_fragment" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_new_friend_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        style="@style/Widget.MaterialComponents.FloatingActionButton"
+        android:src="@drawable/plus_icon_fab"
+        android:contentDescription="@string/add_group_button_description"
+        android:layout_margin="20dp" />
+
 </RelativeLayout>
