--- a/Lifter/app/src/main/res/layout/fragment_contacts.xml
+++ b/Lifter/app/src/main/res/layout/fragment_contacts.xml
@@ -12,4 +12,24 @@
         android:layout_centerInParent="true"
         android:text= "@string/contacts_fragment" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/find_gym_buddy_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:src="@drawable/plus_icon_fab"
+        android:contentDescription="@string/find_a_gym_buddy"
+        android:layout_margin="20dp" />
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/contacts_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"/>
+
+
 </RelativeLayout>
