--- a/Lifter/app/src/main/res/layout/activity_calendar.xml
+++ b/Lifter/app/src/main/res/layout/activity_calendar.xml
@@ -6,12 +6,45 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:padding="5dp"
+        android:layout_marginBottom="10dp"
+        android:visibility="gone"
+        android:id="@+id/suggestedDayLay"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textColor="@color/colorRed"
+            android:text="Suggested Day Name"
+            android:layout_marginStart="10dp"
+            android:textSize="16sp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:id="@+id/tvdayName"
+        android:textStyle="bold"
+        android:textColor="@color/colorBlack"
+        android:layout_marginStart="10dp"
+        android:textSize="15sp" />
+
+    </LinearLayout>
+
     <CalendarView
         android:id="@+id/calendarView"
+        android:layout_below="@+id/suggestedDayLay"
         android:layout_width="match_parent"
         android:weekNumberColor="@color/colorRed"
         android:focusedMonthDateColor="@color/colorBlack"
         android:layout_height="wrap_content" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -84,6 +117,59 @@
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/suggesteventLayout"
+        android:visibility="gone"
+        android:layout_below="@+id/eventLayout"
+        android:padding="15dp">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:cardCornerRadius="5dp"
+            android:elevation="3dp"
+            app:cardUseCompatPadding="true">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorRed"
+                        android:text="Suggested Workout Plan"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:id="@+id/tvRandomworkPlan"
+                        android:textSize="15sp" />
+
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addSuggestedEvent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="15dp"
+        android:backgroundTint="@color/colorRed"
+        android:src="@drawable/ic_add" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addEvent"
