--- a/Lifter/app/src/main/res/layout/activity_workout.xml
+++ b/Lifter/app/src/main/res/layout/activity_workout.xml
@@ -6,6 +6,36 @@
     android:layout_height="match_parent"
     tools:context=".WorkoutActivity">
 
+    <TextView
+        android:id="@+id/Targetreps_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Target reps =  12 reps"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.339"
+        tools:layout_editor_absoluteX="16dp" />
+
+    <TextView
+        android:id="@+id/recreps_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Recorded "
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.339"
+        tools:layout_editor_absoluteX="249dp" />
+
+    <TextView
+        android:id="@+id/RecTarget"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="recorded:"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.285"
+        tools:layout_editor_absoluteX="249dp" />
+
     <Button
         android:id="@+id/Finishworkbutton"
         android:layout_width="417dp"
@@ -24,10 +54,10 @@
         android:layout_height="253dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.838">
+        app:layout_constraintVertical_bias="0.715">
 
 
         <androidx.recyclerview.widget.RecyclerView xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -45,8 +75,19 @@
         android:layout_height="wrap_content"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/Targetweight_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Targetweight =  12Kg"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.285"
+        tools:layout_editor_absoluteX="16dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
