--- a/Lifter/app/src/main/res/layout/activity_register.xml
+++ b/Lifter/app/src/main/res/layout/activity_register.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:src="@drawable/place_holder"
+        android:src="@drawable/lifter_inc_logo"
         android:scaleType="fitXY">
     </ImageView>
 
