--- a/Lifter/app/src/main/res/layout/activity_settings.xml
+++ b/Lifter/app/src/main/res/layout/activity_settings.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:src="@drawable/place_holder"
+        android:src="@drawable/default_profile_icon"
         app:civ_border_width="2dp"
         app:civ_border_color="@color/colorPrimaryDark"/>
 
