--- a/Lifter/app/src/main/res/layout/user_display_layout.xml
+++ b/Lifter/app/src/main/res/layout/user_display_layout.xml
@@ -17,7 +17,7 @@
             android:layout_height="70dp"
             app:civ_border_width="1dp"
             app:civ_border_color="@color/colorPrimary"
-            android:src="@drawable/place_holder" />
+            android:src="@drawable/default_profile_icon" />
         <LinearLayout
             android:layout_width="190dp"
             android:layout_height="wrap_content"
@@ -46,7 +46,6 @@
             android:layout_height="55dp"
             android:layout_marginTop="15dp"
             android:src="@drawable/add_friend_icon">
-
         </ImageView>
     </LinearLayout>
 </RelativeLayout>
