Done button function and colour changing in event.

--- a/Lifter/app/src/main/res/values/colors.xml
+++ b/Lifter/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="colorBlack">#000000</color>
     <color name="colorRed">#800000</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
