--- a/Lifter/app/src/main/res/layout/activity_calendar.xml
+++ b/Lifter/app/src/main/res/layout/activity_calendar.xml
@@ -7,110 +7,134 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/suggestedDayLay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:padding="5dp"
         android:layout_marginBottom="10dp"
-        android:visibility="gone"
-        android:id="@+id/suggestedDayLay"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="5dp"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textColor="@color/colorRed"
-            android:text="Suggested Day Name"
             android:layout_marginStart="10dp"
-            android:textSize="16sp" />
+            android:text="Suggested Day Name"
+            android:textColor="@color/colorRed"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:id="@+id/tvdayName"
-        android:textStyle="bold"
-        android:textColor="@color/colorBlack"
-        android:layout_marginStart="10dp"
-        android:textSize="15sp" />
+        <TextView
+            android:id="@+id/tvdayName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:padding="5dp"
+            android:textColor="@color/colorBlack"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
     <CalendarView
         android:id="@+id/calendarView"
-        android:layout_below="@+id/suggestedDayLay"
         android:layout_width="match_parent"
-        android:weekNumberColor="@color/colorRed"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/suggestedDayLay"
         android:focusedMonthDateColor="@color/colorBlack"
-        android:layout_height="wrap_content" />
+        android:weekNumberColor="@color/colorRed" />
 
 
     <LinearLayout
+        android:id="@+id/eventLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/eventLayout"
-        android:visibility="gone"
         android:layout_below="@+id/calendarView"
-        android:padding="15dp">
+        android:padding="15dp"
+        android:visibility="gone">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/eventCardLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/colorWhite"
+            android:elevation="3dp"
             android:orientation="vertical"
             app:cardCornerRadius="5dp"
-            android:elevation="3dp"
             app:cardUseCompatPadding="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/tvTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:autofillHints=""
-                    android:inputType="textPersonName"
-                    android:padding="5dp"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/tvDesc"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:autofillHints=""
-                    android:inputType="textPersonName"
-                    android:padding="5dp"
-                    android:textSize="15sp" />
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/workOutLay"
-                    android:orientation="vertical">
+                    android:layout_weight="0.3"
+                    android:orientation="vertical"
+                    android:padding="10dp">
 
                     <TextView
+                        android:id="@+id/tvTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:autofillHints=""
+                        android:inputType="textPersonName"
                         android:padding="5dp"
-                        android:textStyle="bold"
-                        android:textColor="@color/colorRed"
-                        android:text="Workout Plan"
-                        android:textSize="16sp" />
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/tvDesc"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:autofillHints=""
+                        android:inputType="textPersonName"
                         android:padding="5dp"
-                        android:id="@+id/tvworkPlan"
                         android:textSize="15sp" />
 
+                    <LinearLayout
+                        android:id="@+id/workOutLay"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:padding="5dp"
+                            android:text="Workout Plan"
+                            android:textColor="@color/colorRed"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/tvworkPlan"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:padding="5dp"
+                            android:textSize="15sp" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="end"
+                    android:gravity="end|center_vertical"
+                    android:padding="10dp">
+
+                    <Button
+                        android:id="@+id/buttonDone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/done" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -119,42 +143,42 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/suggesteventLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/suggesteventLayout"
-        android:visibility="gone"
         android:layout_below="@+id/eventLayout"
-        android:padding="15dp">
+        android:padding="15dp"
+        android:visibility="gone">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:elevation="3dp"
             android:orientation="vertical"
             app:cardCornerRadius="5dp"
-            android:elevation="3dp"
             app:cardUseCompatPadding="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="10dp">
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="5dp"
-                        android:textStyle="bold"
-                        android:textColor="@color/colorRed"
-                        android:text="Suggested Workout Plan"
-                        android:textSize="16sp" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:text="Suggested Workout Plan"
+                    android:textColor="@color/colorRed"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="5dp"
-                        android:id="@+id/tvRandomworkPlan"
-                        android:textSize="15sp" />
+                <TextView
+                    android:id="@+id/tvRandomworkPlan"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:textSize="15sp" />
 
 
             </LinearLayout>
