--- a/Lifter/app/src/main/res/layout/activity_survey_button.xml
+++ b/Lifter/app/src/main/res/layout/activity_survey_button.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context=".SurveyActivity">
+    tools:context=".SurveyButtons">
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
@@ -114,13 +114,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="89dp"
-        android:layout_marginEnd="72dp"
+        android:layout_marginEnd="16dp"
         android:background="#FFFFFF"
         android:text="Reset"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/b_option3"
-        app:layout_constraintVertical_bias="0.536" />
+        app:layout_constraintVertical_bias="0.78" />
 
     <TextView
         android:id="@+id/ShowOutput"
