recyclerview gone and added video

--- a/Lifter/app/src/main/res/layout/activity_specific_exercise.xml
+++ b/Lifter/app/src/main/res/layout/activity_specific_exercise.xml
@@ -120,4 +120,13 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.339" />
 
+    <VideoView
+        android:id="@+id/videoView"
+        android:layout_width="408dp"
+        android:layout_height="189dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="8dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
